@@ -19,24 +19,40 @@ import org.example.controlador.CRUDController;
 import org.example.entidades.Habitacion;
 import org.example.entidades.Hotel;
 
+import javax.swing.*;
+import java.awt.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
 public class CreateRoomPanel extends JPanel {
-   private JTextField roomNumberField, hotelIdField, roomTypeField, amenitiesField;
+    private JTextField roomNumberField, roomTypeField, amenitiesField;
+    private JComboBox<String> hotelDropdown;
     private CRUDController crudController;
+    private List<Hotel> hotelesDisponibles; // Lista de hoteles disponibles
 
     public CreateRoomPanel(MainFrame mainFrame) {
         crudController = new CRUDController();
 
         setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
 
+        // Inicializar campos de entrada
         roomNumberField = new JTextField(10);
-        hotelIdField = new JTextField(10);
         roomTypeField = new JTextField(20);
         amenitiesField = new JTextField(20);
 
+        // Obtener la lista de hoteles disponibles desde el CRUDController
+        hotelesDisponibles = crudController.getHotelesDisponibles();
+
+        // Crear la lista desplegable con los nombres de los hoteles
+        hotelDropdown = new JComboBox<>(hotelesDisponibles.stream()
+                .map(Hotel::getNombre)
+                .toArray(String[]::new));
+        
         add(new JLabel("Número de Habitación:"));
         add(roomNumberField);
-        add(new JLabel("ID del Hotel:"));
-        add(hotelIdField);
+        add(new JLabel("Hotel:"));
+        add(hotelDropdown);
         add(new JLabel("Tipo de Habitación:"));
         add(roomTypeField);
         add(new JLabel("Amenities (IDs separados por coma):"));
@@ -46,7 +62,7 @@ public class CreateRoomPanel extends JPanel {
         createButton.addActionListener(e -> createRoom());
 
         JButton backButton = new JButton("Regresar");
-        backButton.addActionListener(e -> mainFrame.showPanel("RoomCRUDPanel")); // Ajustar nombre según el panel anterior
+        backButton.addActionListener(e -> mainFrame.showPanel("RoomCRUDPanel"));
 
         add(createButton);
         add(backButton);
@@ -55,16 +71,18 @@ public class CreateRoomPanel extends JPanel {
     private void createRoom() {
         try {
             int roomNumber = Integer.parseInt(roomNumberField.getText());
-            int hotelId = Integer.parseInt(hotelIdField.getText());
             String roomType = roomTypeField.getText();
             
+            // Obtener el ID del hotel seleccionado
+            int hotelId = hotelesDisponibles.get(hotelDropdown.getSelectedIndex()).getIdHotel();
+
             // Convertir los IDs de amenities a una lista de enteros
             List<Integer> amenities = new ArrayList<>();
             if (!amenitiesField.getText().trim().isEmpty()) {
                 amenities = Arrays.stream(amenitiesField.getText().split(","))
                         .map(String::trim)
                         .map(Integer::parseInt)
-                        .toList();
+                        .collect(Collectors.toList());
             }
 
             // Crear la habitación
